--- a/language/deDE.yml
+++ b/language/deDE.yml
@@ -2,3 +2,5 @@
 # Aktuelle Version/current version - <version>
 #
 loadNoProblems: Keine Probleme beim Laden von <version>.
+configFileCreated: config.yml wurde erfolgreich erstellt.
+languageFileCreated: Die Sprachdatei wurde erfolgreich erstellt.
