Added new language points.
Signed-off-by: FroznMine <pesafrre@arcor.de>

--- a/language/deDE.yml
+++ b/language/deDE.yml
@@ -28,3 +28,20 @@ commandWorldBlockBreakSuccess:
 commandWorldBlockBreakFailedAlready:
 commandWorldBlockBreakFailedNoWorld:
 commandWorldBlockBreakFailedWorldMissing:
+
+
+commandWorldAllowUseSuccess:
+commandWorldAllowUseFailedAlready:
+commandWorldAllowUseFailedNoWorld:
+commandWorldAllowUseFailedWorldMissing:
+
+commandWorldAllowBuildSuccess:
+commandWorldAllowBuildFailedAlready:
+commandWorldAllowBuildFailedNoWorld:
+commandWorldAllowBuildFailedWorldMissing:
+
+commandWorldAllowBreakSuccess:
+commandWorldAllowBreakFailedAlready:
+commandWorldAllowBreakFailedNoWorld:
+commandWorldAllowBreakFailedWorldMissing:
+
